--- a/index.html
+++ b/index.html
@@ -28,23 +28,125 @@
 
       <div class="banner">
         <div class="banner-content">
-          
-             <h3 class="banner-greetings">Hi, I  am</h3>
-            <h1 class="banner-title">Mary Hardy</h1>
-            <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+          <h3 class="banner-greetings">Hi, I am</h3>
+          <h1 class="banner-title">Mary Hardy</h1>
+          <p class="banner-description common-description">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            <br />
+            he. Morning because as to society behaved moments.
+          </p>
 
-            <div class="banner-buttons">
-                <button class="button-primary"><img src="/Assests/icons/Frame.png" alt="download">Download CV</button>
-                <button class="button-secondary"> <img src="/Assests/icons/Group 8.png" alt="call">Contact</button>
-            </div>
-
+          <div class="banner-buttons">
+            <button class="button-primary">
+              <img src="/Assests/icons/Frame.png" alt="download" />Download CV
+            </button>
+            <button class="button-secondary">
+              <img src="/Assests/icons/Group 8.png" alt="call" />Contact
+            </button>
+          </div>
         </div>
 
-        <img class="banner-profile-img" src="/Assests/hardy.png" alt="hardy image">
+        <img
+          class="banner-profile-img"
+          src="/Assests/hardy.png"
+          alt="hardy image"
+        />
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="about-description common-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional results
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+
+        <div class="about-items">
+          <div class="about-item">
+            <p class="item-title common-description">Name:</p>
+            <p class="item-description">Mary Hardy</p>
+          </div>
+          <div class="about-item">
+            <p class="item-title common-description">Email:</p>
+            <p class="item-description">info@gmail.com</p>
+          </div>
+          <div class="about-item">
+            <p class="item-title common-description">Date of birth:</p>
+            <p class="item-description">11 November 1987</p>
+          </div>
+          <div class="about-item">
+            <p class="item-title common-description">From:</p>
+            <p class="item-description">Los Angeles, USA</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="skills">
+        <h3 class="section-title">What I do</h3>
+        <p class="skill-description common-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+
+        <div class="skills-details">
+          <div class="skill-card">
+            <img class="icon" src="/Assests/icons/js.png" alt="js-icon" />
+            <h3 class="skill-name">Vanilla JavaScript</h3>
+            <p class="skill-set-description common-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+
+          <div class="skill-card">
+            <img class="icon" src="/Assests/icons/react.png" alt="js-icon" />
+            <h3 class="skill-name">React</h3>
+            <p class="skill-set-description common-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+
+          <div class="skill-card">
+            <img class="icon" src="/Assests/icons/nodejs.png" alt="js-icon" />
+            <h3 class="skill-name">NOde.js</h3>
+            <p class="skill-set-description common-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+
+          <div class="skill-card">
+            <img class="icon" src="/Assests/icons/mongo.png" alt="js-icon" />
+            <h3 class="skill-name">MongoDB</h3>
+            <p class="skill-set-description common-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="resume">
+        <h3 class="section-title">A summary of My Resume</h3>
+
+        <div>
+          <div class="education"></div>
+
+          <div class="jobs"></div>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
