create the skill,resume and footer section

--- a/index.html
+++ b/index.html
@@ -140,14 +140,116 @@
       <section class="resume">
         <h3 class="section-title">A summary of My Resume</h3>
 
-        <div>
-          <div class="education"></div>
+        <div class="edu-job-container">
+          <div class="education">
+            <h2 class="resume-title">My Education</h2>
+            <div class="edu-container">
+              <h2 class="degree-name">Master in Computer Engineering</h2>
+              <p class="institute">Harvard University / 2015 - 2017</p>
+              <p class="description common-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
 
-          <div class="jobs"></div>
+            <hr />
+
+            <div class="resume-container">
+              <h2 class="degree-name">Master in Computer Engineering</h2>
+              <p class="institute">Harvard University / 2015 - 2017</p>
+              <p class="description common-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+
+            <hr />
+
+            <div class="edu-container">
+              <h2 class="degree-name">Master in Computer Engineering</h2>
+              <p class="institute">Harvard University / 2015 - 2017</p>
+              <p class="description common-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+
+          <div class="jobs">
+            <h2 class="resume-title">My Experience</h2>
+            <div class="resume-container">
+              <h2 class="degree-name">Sr. Font End Developer</h2>
+              <p class="institute">Apple Inc / 2020 - Current</p>
+              <p class="description common-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+
+            <hr />
+
+            <div class="edu-container">
+              <h2 class="degree-name">Jr. Font End Developer</h2>
+              <p class="institute">Dribbble Inc / 2018 - 2022</p>
+              <p class="description common-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+
+            <hr />
+
+            <div class="edu-container">
+              <h2 class="degree-name">HTML Developer</h2>
+              <p class="institute">Adobe Inc / 2017 - 2018</p>
+              <p class="description common-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="cv-btn">
+          <button class="button-primary">
+            <img src="/Assests/icons/Frame.png" alt="download" />Download CV
+          </button>
         </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-social">
+          <h2 class="footer-title">Lets Connect</h2>
+          <p class="common-description footer-mgs">
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+
+          <div class="social">
+            <img src="/Assests/icons/facebook.png" alt="facebook" />
+            <img src="/Assests/icons/twitter.png" alt="twitter" />
+            <img src="/Assests/icons/insta.png" alt="instagram" />
+          </div>
+        </div>
+        <div class="footer-form">
+          <h2 class="footer-title">Let’s Message me</h2>
+
+          <form action="">
+            <input placeholder="Your Name" type="text" name="name" id="" />
+            <input placeholder="Your email" type="email" name="email" id="" />
+            <textarea placeholder="Message" rows="8" name="message" id=""></textarea>
+            <button class="button-primary submit-btn" type="submit">Submit</button>
+          </form>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
