--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/Styles/portfolio.css" />
+    <link rel="stylesheet" href="/portfolio.css" />
+    <!-- font FontAwesome style  -->
+    <script
+      src="https://kit.fontawesome.com/e0b35deefc.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="work-sans-mainFont">
     <header>
@@ -41,7 +47,7 @@
               <img src="/Assests/icons/Frame.png" alt="download" />Download CV
             </button>
             <button class="button-secondary">
-              <img src="/Assests/icons/Group 8.png" alt="call" />Contact
+              <i class="fa-solid fa-phone"></i> Contact
             </button>
           </div>
         </div>
@@ -234,9 +240,15 @@
           </p>
 
           <div class="social">
-            <img src="/Assests/icons/facebook.png" alt="facebook" />
-            <img src="/Assests/icons/twitter.png" alt="twitter" />
-            <img src="/Assests/icons/insta.png" alt="instagram" />
+            <a href="https://www.facebook.com/">
+              <img src="/Assests/icons/facebook.png" alt="facebook"
+            /></a>
+            <a href="https://x.com/">
+              <img src="/Assests/icons/twitter.png" alt="twitter"
+            /></a>
+            <a href="https://www.instagram.com/"
+              ><img src="/Assests/icons/insta.png" alt="instagram"
+            /></a>
           </div>
         </div>
         <div class="footer-form">
@@ -245,8 +257,15 @@
           <form action="">
             <input placeholder="Your Name" type="text" name="name" id="" />
             <input placeholder="Your email" type="email" name="email" id="" />
-            <textarea placeholder="Message" rows="8" name="message" id=""></textarea>
-            <button class="button-primary submit-btn" type="submit">Submit</button>
+            <textarea
+              placeholder="Message"
+              rows="8"
+              name="message"
+              id=""
+            ></textarea>
+            <button class="button-primary submit-btn" type="submit">
+              Submit
+            </button>
           </form>
         </div>
       </div>
