--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/portfolio.css" />
+    <link rel="stylesheet" href="portfolio.css" />
     <!-- font FontAwesome style  -->
     <script
       src="https://kit.fontawesome.com/e0b35deefc.js"
