make some image path fixing

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
           <div class="banner-buttons">
             <button class="button-primary">
-              <img src="/Assests/icons/Frame.png" alt="download" />Download CV
+              <img src="./Assests/icons/Frame.png" alt="download" />Download CV
             </button>
             <button class="button-secondary">
               <i class="fa-solid fa-phone"></i> Contact
@@ -54,7 +54,7 @@
 
         <img
           class="banner-profile-img"
-          src="/Assests/hardy.png"
+          src="./Assests/hardy.png"
           alt="hardy image"
         />
       </div>
@@ -102,7 +102,7 @@
 
         <div class="skills-details">
           <div class="skill-card">
-            <img class="icon" src="/Assests/icons/js.png" alt="js-icon" />
+            <img class="icon" src="./Assests/icons/js.png" alt="js-icon" />
             <h3 class="skill-name">Vanilla JavaScript</h3>
             <p class="skill-set-description common-description">
               List skill/technologies here. You can change the icon above to any
@@ -112,7 +112,7 @@
           </div>
 
           <div class="skill-card">
-            <img class="icon" src="/Assests/icons/react.png" alt="js-icon" />
+            <img class="icon" src="./Assests/icons/react.png" alt="js-icon" />
             <h3 class="skill-name">React</h3>
             <p class="skill-set-description common-description">
               List skill/technologies here. You can change the icon above to any
@@ -122,7 +122,7 @@
           </div>
 
           <div class="skill-card">
-            <img class="icon" src="/Assests/icons/nodejs.png" alt="js-icon" />
+            <img class="icon" src="./Assests/icons/nodejs.png" alt="js-icon" />
             <h3 class="skill-name">NOde.js</h3>
             <p class="skill-set-description common-description">
               List skill/technologies here. You can change the icon above to any
@@ -132,7 +132,7 @@
           </div>
 
           <div class="skill-card">
-            <img class="icon" src="/Assests/icons/mongo.png" alt="js-icon" />
+            <img class="icon" src="./Assests/icons/mongo.png" alt="js-icon" />
             <h3 class="skill-name">MongoDB</h3>
             <p class="skill-set-description common-description">
               List skill/technologies here. You can change the icon above to any
@@ -224,7 +224,7 @@
 
         <div class="cv-btn">
           <button class="button-primary">
-            <img src="/Assests/icons/Frame.png" alt="download" />Download CV
+            <img src="./Assests/icons/Frame.png" alt="download" />Download CV
           </button>
         </div>
       </section>
@@ -241,13 +241,13 @@
 
           <div class="social">
             <a href="https://www.facebook.com/">
-              <img src="/Assests/icons/facebook.png" alt="facebook"
+              <img src="./Assests/icons/facebook.png" alt="facebook"
             /></a>
             <a href="https://x.com/">
-              <img src="/Assests/icons/twitter.png" alt="twitter"
+              <img src="./Assests/icons/twitter.png" alt="twitter"
             /></a>
             <a href="https://www.instagram.com/"
-              ><img src="/Assests/icons/insta.png" alt="instagram"
+              ><img src="./Assests/icons/insta.png" alt="instagram"
             /></a>
           </div>
         </div>
